[Codeblocks] Save the ide state.

--- a/codeblocks/Game_Frogger.cbp
+++ b/codeblocks/Game_Frogger.cbp
@@ -52,20 +52,31 @@
 		<Unit filename="../game/include/GameFrogger_Utils.h" />
 		<Unit filename="../game/include/GameObject.h" />
 		<Unit filename="../game/include/Hud.h" />
+		<Unit filename="../game/include/LevelInfo.h" />
 		<Unit filename="../game/include/Player.h" />
+		<Unit filename="../game/include/SceneCredits.h" />
 		<Unit filename="../game/include/SceneGame.h" />
+		<Unit filename="../game/include/SceneGame_HelperFunctions.h" />
+		<Unit filename="../game/include/SceneGame_Tile_Constants.h" />
 		<Unit filename="../game/include/SceneMenu.h" />
+		<Unit filename="../game/include/SceneSplash.h" />
 		<Unit filename="../game/include/Tree.h" />
+		<Unit filename="../game/include/Turtle.h" />
 		<Unit filename="../game/include/TurtleEnemy.h" />
 		<Unit filename="../game/src/BonusEnemy.cpp" />
 		<Unit filename="../game/src/Car.cpp" />
 		<Unit filename="../game/src/Enemy.cpp" />
 		<Unit filename="../game/src/GameObject.cpp" />
 		<Unit filename="../game/src/Hud.cpp" />
+		<Unit filename="../game/src/LevelInfo.cpp" />
 		<Unit filename="../game/src/Player.cpp" />
+		<Unit filename="../game/src/SceneCredits.cpp" />
 		<Unit filename="../game/src/SceneGame.cpp" />
+		<Unit filename="../game/src/SceneGame_HelperFunctions.cpp" />
 		<Unit filename="../game/src/SceneMenu.cpp" />
+		<Unit filename="../game/src/SceneSplash.cpp" />
 		<Unit filename="../game/src/Tree.cpp" />
+		<Unit filename="../game/src/Turtle.cpp" />
 		<Unit filename="../game/src/main.cpp" />
 		<Unit filename="../lib/Lore/Lore.h" />
 		<Unit filename="../lib/Lore/include/AssetsManager.h" />
@@ -102,6 +113,7 @@
 		<Unit filename="../lib/Lore/lib/CoreGame/include/Macros/CoreGame_Disallow.h" />
 		<Unit filename="../lib/Lore/lib/CoreGame/include/Macros/CoreGame_OnlyInDebug.h" />
 		<Unit filename="../lib/Lore/lib/CoreGame/include/Macros/CoreGame_Singleton.h" />
+		<Unit filename="../lib/Lore/lib/CoreGame/include/Macros/CoreGame_Verify.h" />
 		<Unit filename="../lib/Lore/lib/CoreGame/include/Status.h" />
 		<Unit filename="../lib/Lore/lib/CoreGame/include/StringUtils.h" />
 		<Unit filename="../lib/Lore/lib/CoreGame/src/GameCore_Macros.cpp" />
