--- a/codeblocks/Game_Frogger.cbp
+++ b/codeblocks/Game_Frogger.cbp
@@ -20,7 +20,7 @@
 				<Option output="bin/Release/Game_Frogger" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../" />
 				<Option object_output="obj/Release/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
@@ -148,6 +148,7 @@
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
